feat : implement thread pool for client connections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ set(DAEMON_SOURCES
     src/daemon/socket_server.cpp
     src/daemon/command_queue.cpp
     src/daemon/cec_operation.cpp
+    src/daemon/thread_pool.cpp
     src/daemon/main.cpp
     ${COMMON_SOURCES}
 )
