feat : wakeDevices & powerOffDevices
fix : better description of configuration parameters

--- a/etc/cec-control.conf
+++ b/etc/cec-control.conf
@@ -1,18 +1,22 @@
 # CEC Control Configuration File
 
 [Adapter]
-# Name for the CEC device
+# Name displayed by the CEC device on the network
 DeviceName = CEC Control
-# Whether to automatically power on
+# Whether to automatically wake the TV when usb is powered
 AutoPowerOn = false
-# Whether to wake the AVR automatically
+# Whether to wake the AVR automatically when the source is activated
 AutoWakeAVR = false
-# Whether to activate as source
+# Whether to activate as source on the bus when starting the application
 ActivateSource = false
-# Whether to use system audio mode
+# Whether to use audiosystem mode
 SystemAudioMode = false
-# Whether to power off on standby
+# Whether to put this PC in standby mode when the TV is switched off
 PowerOffOnStandby = false
+# Specific device addresses to wake up (comma-separated list of addresses, 0-15)
+WakeDevices = 
+# Specific device addresses to power off (comma-separated list of addresses, 0-15)
+PowerOffDevices = 
 
 [Daemon]
 # Whether to scan for devices at startup
