--- a/scripts/cec-daemon.service.in
+++ b/scripts/cec-daemon.service.in
@@ -1,21 +1,37 @@
 [Unit]
 Description=CEC Control Daemon
-After=multi-user.target
+Documentation=file:///usr/share/doc/cec-control/README.md
+After=network.target
 Wants=dbus.service
 
 [Service]
-Type=forking
+Type=simple
 User=@INSTALL_USER@
+Group=@INSTALL_USER@
 ExecStart=@CMAKE_INSTALL_PREFIX@/bin/cec-daemon
-PIDFile=/run/cec-control/cec-daemon.pid
 Restart=on-failure
 RestartSec=5
 
-# Set up runtime directory
-Environment=XDG_RUNTIME_DIR=/run
+# Runtime directories and permissions
+# Only specify directory name, not full path (systemd adds /run/ prefix)
 RuntimeDirectory=cec-control
 RuntimeDirectoryMode=0755
-Environment=CEC_CONTROL_SOCKET=/run/cec-control/socket
+StateDirectory=cec-control
+StateDirectoryMode=0750
+CacheDirectory=cec-control
+CacheDirectoryMode=0750
+LogsDirectory=cec-control
+LogsDirectoryMode=0750
+
+# Set explicit environment variable to indicate we're running as a system service
+# This makes detection much more reliable
+Environment=CEC_CONTROL_ENVIRONMENT=system_service
+
+# Security hardening
+ProtectSystem=full
+ProtectHome=read-only
+PrivateTmp=true
+NoNewPrivileges=true
 
 [Install]
 WantedBy=multi-user.target
