docs : improve wording

--- a/etc/cec-control.conf
+++ b/etc/cec-control.conf
@@ -13,9 +13,9 @@ ActivateSource = false
 SystemAudioMode = false
 # Whether to put this PC in standby mode when the TV is switched off
 PowerOffOnStandby = false
-# Specific device addresses to wake up (comma-separated list of addresses, 0-15)
+# Comma-separated list of logical addresses (0-15) to wake on resume
 WakeDevices = 
-# Specific device addresses to power off (comma-separated list of addresses, 0-15)
+# Comma-separated list of logical addresses (0-15) to power off on suspend
 PowerOffDevices = 
 
 [Daemon]
