--- a/cmake/cmake_uninstall.cmake.in
+++ b/cmake/cmake_uninstall.cmake.in
@@ -4,18 +4,41 @@ endif()
 
 file(READ "@CMAKE_BINARY_DIR@/install_manifest.txt" files)
 string(REGEX REPLACE "\n" ";" files "${files}")
+
+# Collect directories for potential removal
+set(directories)
+
 foreach(file ${files})
   message(STATUS "Uninstalling $ENV{DESTDIR}${file}")
   if(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
-    exec_program(
-      "@CMAKE_COMMAND@" ARGS "-E remove \"$ENV{DESTDIR}${file}\""
+    execute_process(
+      COMMAND ${CMAKE_COMMAND} -E remove "$ENV{DESTDIR}${file}"
       OUTPUT_VARIABLE rm_out
-      RETURN_VALUE rm_retval
+      RESULT_VARIABLE rm_retval
       )
     if(NOT "${rm_retval}" STREQUAL 0)
       message(FATAL_ERROR "Problem when removing $ENV{DESTDIR}${file}")
     endif()
-  else(IS_SYMLINK "$ENV{DESTDIR}${file}" OR EXISTS "$ENV{DESTDIR}${file}")
+    
+    # Add the parent directory to our list
+    get_filename_component(directory "${file}" DIRECTORY)
+    list(APPEND directories "${directory}")
+  else()
     message(STATUS "File $ENV{DESTDIR}${file} does not exist.")
   endif()
+endforeach()
+
+# Remove duplicates
+list(REMOVE_DUPLICATES directories)
+
+# Sort directories by length in descending order to remove child directories first
+list(SORT directories COMPARE STRING ORDER DESCENDING)
+
+# Try to remove directories if empty
+foreach(directory ${directories})
+  message(STATUS "Removing directory if empty: $ENV{DESTDIR}${directory}")
+  execute_process(
+    COMMAND ${CMAKE_COMMAND} -E remove_directory "$ENV{DESTDIR}${directory}"
+    ERROR_QUIET
+    )
 endforeach()
