new : option to disable power monitor

--- a/etc/cec-control.conf
+++ b/etc/cec-control.conf
@@ -23,6 +23,8 @@ PowerOffDevices =
 ScanDevicesAtStartup = false
 # Whether to queue commands during suspend
 QueueCommandsDuringSuspend = true
+# Whether to enable D-Bus power state monitoring for automatic suspend/resume handling
+EnablePowerMonitor = true
 
 [Throttler]
 # Base interval between commands (milliseconds)
